<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Hallo!"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/buttonOrange"
        android:fontFamily="@font/comic_reg"
        android:textAlignment="center"
        android:layout_marginTop="55dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/welcomeSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/was_m_chtest_du_als_n_chstes_machen"
        android:textSize="30sp"
        android:textColor="@color/buttonText"
        android:fontFamily="@font/comic_reg"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/parrotImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/parrot_transparent"
        android:layout_marginBottom="-40dp"
        app:layout_constraintBottom_toTopOf="@id/startButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/papagei" />
    <LinearLayout
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/abgerundeterbutton"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_search_24"
            android:contentDescription="@string/tiere_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tiere_entdecken"
            android:textSize="28sp"
            android:textColor="#380592"
            android:fontFamily="@font/comic_reg"
            android:layout_marginStart="16dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <!-- Zweiter Button -->
    <LinearLayout
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/abgerundeterbutton"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_pets_24"
            android:contentDescription="@string/flugzeug_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sammlung_ansehen"
            android:textSize="28sp"
            android:textColor="#380592"
            android:fontFamily="@font/comic_reg"
            android:layout_marginStart="16dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="🎯 Mission:"
        android:textSize="20sp"
        android:layout_marginBottom="12dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
