<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/rounded_button"
    android:layout_marginBottom="8dp"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/imageAnimal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/tierbild" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textName"
            android:text="@string/affe"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#380592"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textDetails"
            android:text="@string/herkunft_afrika_nerwartetes_alter_25_jahre_nessen_bananen_nfunfact_liebt_klettern"
            android:textSize="14sp"
            android:textColor="#444"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnSelfie"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_camera_alt_24"
        android:background="@android:color/transparent"
        android:contentDescription="Selfie machen"
        android:tooltipText="Selfie mit dem Tier"
        app:tint="@color/buttonOrange" />

</LinearLayout>
